Fixed vertical align of .cardLoading

--- a/scss/main/master.scss
+++ b/scss/main/master.scss
@@ -178,6 +178,7 @@ body {
 
 .cardLoading {
     margin: auto;
+    margin-top: 140px;
     vertical-align: middle;
     text-align: center;
 
